[tool.poetry]
name = "bgraph"
version = "0.1.0"
license = "Apache-2.0"
description = ""
authors = ["A. Challande <achallande@quarkslab.com>"]
readme = "README.md"
documentation = "https://achallande.doc.qb/bgraph/"
classifiers = [
  "Operating System :: Android",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Security",
]

[tool.poetry.scripts]
bgraph = "bgraph.main:app"

[tool.poetry.dependencies]
python = "^3.8"
sh = "^1.14.1"
networkx = "^2.5"
typer = {extras = ["all"], version = "^0.3.2"}
pyparsing = "^2.4.7"
untangle = "^1.1.1"
rich = "^9.11.0"
pydot = "^1.4.2"
mkdocs = {version = "^1.1.2", optional = true}
mkdocs-material = {version = "^7.1.3", optional = true}
mkdocstrings = {version = "^0.15.0", optional = true}

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"
mypy = "^0.800"
black = "^20.8b1"
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.0"

[tool.poetry.extras]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
